--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,7 +31,6 @@ phases:
       - cd ..
       - echo Lambda Layer packaged.
 
-
   build:
     commands:
       - echo Fetching AWS Account ID and Region dynamically...
@@ -47,14 +46,10 @@ phases:
       - DATALAKE_BUCKET=$(aws cloudformation describe-stacks --stack-name ${BASE_STACK_NAME} --query "Stacks[0].Outputs[?OutputKey=='DatalakeBucketOut'].OutputValue" --output text || echo "undefined")
       - LAMBDA_ROLE_ARN=$(aws cloudformation describe-stacks --stack-name ${BASE_STACK_NAME} --query "Stacks[0].Outputs[?OutputKey=='LambdaExecutionRoleArnOut'].OutputValue" --output text || echo "undefined")
       - GLUE_ROLE_NAME=$(aws cloudformation describe-stacks --stack-name ${BASE_STACK_NAME} --query "Stacks[0].Outputs[?OutputKey=='GlueServiceRoleNameOut'].OutputValue" --output text || echo "undefined")
-#      - echo ArtifactsBucketOut=$ARTIFACTS_BUCKET
-#      - echo DatalakeBucketOut=$DATALAKE_BUCKET
-#      - echo LambdaExecutionRoleArnOut=$LAMBDA_ROLE_ARN
-#      - echo GlueServiceRoleNameOut=$GLUE_ROLE_NAME
-#      - if [ -z "$ARTIFACTS_BUCKET" ] || [ -z "$DATALAKE_BUCKET" ] || [ -z "$LAMBDA_ROLE_ARN" ] || [ -z "$GLUE_ROLE_NAME" ]; then echo "ERROR: Missing required parameters from base infra outputs"; exit 1; fi
       - echo Uploading artifacts to S3...
       - aws s3 cp lambda/sylvester_ingestion.zip s3://${ARTIFACTS_BUCKET}/lambda/sylvester_ingestion.zip
       - aws s3 cp lambda/sylvester_trigger_silver_to_gold.zip s3://${ARTIFACTS_BUCKET}/lambda/sylvester_trigger_silver_to_gold.zip
+      - aws s3 cp lambda/layers/requests_layer.zip s3://${ARTIFACTS_BUCKET}/lambda/layers/requests_layer.zip      # <=== ADD THIS LINE
       - aws s3 cp glue/sylvester_bronze_to_silver.py s3://${ARTIFACTS_BUCKET}/glue/sylvester_bronze_to_silver.py
       - aws s3 cp glue/sylvester_silver_to_gold.py s3://${ARTIFACTS_BUCKET}/glue/sylvester_silver_to_gold.py
       - echo Deploying app infra...
