--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,19 +16,25 @@ phases:
   pre_build:
     commands:
       - echo Hashing Lambda + Glue scripts...
+      # Compute hashes
       - HASH_INGEST=$(sha256sum lambda/sylvester_ingestion.py | cut -d ' ' -f1)
       - HASH_TRIGGER=$(sha256sum lambda/sylvester_trigger_silver_to_gold.py | cut -d ' ' -f1)
       - HASH_BRONZE_SILVER=$(sha256sum glue/sylvester_bronze_to_silver.py | cut -d ' ' -f1)
       - HASH_SILVER_GOLD=$(sha256sum glue/sylvester_silver_to_gold.py | cut -d ' ' -f1)
+      # Package Lambda functions
       - echo Packaging Lambda functions...
-      - cd lambda && zip -r ../lambda/sylvester_ingestion_${HASH_INGEST}.zip sylvester_ingestion.py
-      - cd lambda && zip -r ../lambda/sylvester_trigger_silver_to_gold_${HASH_TRIGGER}.zip sylvester_trigger_silver_to_gold.py
+      - cd lambda
+      - zip -r ../lambda/sylvester_ingestion_${HASH_INGEST}.zip sylvester_ingestion.py
+      - zip -r ../lambda/sylvester_trigger_silver_to_gold_${HASH_TRIGGER}.zip sylvester_trigger_silver_to_gold.py
       - cd ..
+      # Package layer
       - echo Packaging Lambda Layer with requests...
       - rm -rf layer_build
       - mkdir -p layer_build/python
       - pip install requests -t layer_build/python/
-      - cd layer_build && mkdir -p ../lambda/layers && zip -r ../lambda/layers/requests_layer.zip python
+      - cd layer_build
+      - mkdir -p ../lambda/layers
+      - zip -r ../lambda/layers/requests_layer.zip python
       - cd ..
       - echo Lambda Layer packaged.
 
@@ -38,14 +44,17 @@ phases:
       - export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
       - export AWS_REGION=$(aws configure get region || echo "eu-west-2")
       - set -e
+      # Base stack
       - echo Deploying base infra...
       - aws cloudformation deploy --template-file cloudformation/base-infra.yaml --stack-name ${BASE_STACK_NAME} --capabilities CAPABILITY_NAMED_IAM --parameter-overrides ArtifactsBucketName="sylvester-artifacts-${AWS_ACCOUNT_ID}-${AWS_REGION}" DatalakeBucketName="sylvester-datalake-${AWS_ACCOUNT_ID}-${AWS_REGION}" --region ${AWS_REGION} --no-fail-on-empty-changeset
       - aws cloudformation wait stack-create-complete --stack-name ${BASE_STACK_NAME} --region ${AWS_REGION}
       - aws cloudformation wait stack-update-complete --stack-name ${BASE_STACK_NAME} --region ${AWS_REGION} || true
+      # Read outputs
       - ARTIFACTS_BUCKET=$(aws cloudformation describe-stacks --stack-name ${BASE_STACK_NAME} --query "Stacks[0].Outputs[?OutputKey=='ArtifactsBucketOut'].OutputValue" --output text)
       - DATALAKE_BUCKET=$(aws cloudformation describe-stacks --stack-name ${BASE_STACK_NAME} --query "Stacks[0].Outputs[?OutputKey=='DatalakeBucketOut'].OutputValue" --output text)
       - LAMBDA_ROLE_ARN=$(aws cloudformation describe-stacks --stack-name ${BASE_STACK_NAME} --query "Stacks[0].Outputs[?OutputKey=='LambdaExecutionRoleArnOut'].OutputValue" --output text)
       - GLUE_ROLE_NAME=$(aws cloudformation describe-stacks --stack-name ${BASE_STACK_NAME} --query "Stacks[0].Outputs[?OutputKey=='GlueServiceRoleNameOut'].OutputValue" --output text)
+      # Upload artifacts to S3
       - echo Uploading Lambda artifacts...
       - aws s3 cp lambda/sylvester_ingestion_${HASH_INGEST}.zip s3://${ARTIFACTS_BUCKET}/lambda/sylvester_ingestion_${HASH_INGEST}.zip
       - aws s3 cp lambda/sylvester_trigger_silver_to_gold_${HASH_TRIGGER}.zip s3://${ARTIFACTS_BUCKET}/lambda/sylvester_trigger_silver_to_gold_${HASH_TRIGGER}.zip
@@ -53,8 +62,10 @@ phases:
       - echo Uploading Glue scripts...
       - aws s3 cp glue/sylvester_bronze_to_silver.py s3://${ARTIFACTS_BUCKET}/glue/sylvester_bronze_to_silver_${HASH_BRONZE_SILVER}.py
       - aws s3 cp glue/sylvester_silver_to_gold.py s3://${ARTIFACTS_BUCKET}/glue/sylvester_silver_to_gold_${HASH_SILVER_GOLD}.py
+      # Deploy app stack
       - echo Deploying app infra...
       - aws cloudformation deploy --template-file cloudformation/app-infra.yaml --stack-name ${APP_STACK_NAME} --capabilities CAPABILITY_NAMED_IAM --parameter-overrides ArtifactsBucketName=${ARTIFACTS_BUCKET} DatalakeBucketName=${DATALAKE_BUCKET} GlueServiceRoleName=${GLUE_ROLE_NAME} LambdaExecutionRoleArn=${LAMBDA_ROLE_ARN} SylvesterIngestionLambdaS3Key=lambda/sylvester_ingestion_${HASH_INGEST}.zip SylvesterTriggerLambdaS3Key=lambda/sylvester_trigger_silver_to_gold_${HASH_TRIGGER}.zip BronzeToSilverScriptKey=glue/sylvester_bronze_to_silver_${HASH_BRONZE_SILVER}.py SilverToGoldScriptKey=glue/sylvester_silver_to_gold_${HASH_SILVER_GOLD}.py --region ${AWS_REGION} --no-fail-on-empty-changeset
+      # Trigger ingestion
       - echo Triggering ingestion pipeline...
       - aws lambda invoke --function-name sylvester_ingestion_lambda --payload '{}' /tmp/ingest.json
       - echo Ingestion pipeline initialized.
